--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,6 @@
 <section class="hero">
     <div class="hero_container container">
+        <canvas class="hero_confetti" id="canvas"></canvas>
 
         <div class="hero_sides">
             <div class="hero_left-side">
@@ -15,9 +16,6 @@
                     </li>
 
                 </ul>
-
-
-
             </div>
 
             <div class="hero_right-side">
