--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,11 +9,8 @@
             ./images/logo/tablet_logo@1x.webp   48w,
             ./images/logo/mobile_logo@2x.webp   80w,
             ./images/logo/mobile_logo.webp      40w
-          "
-          src="./images/logo/mobile_logo.png"
-          sizes="(min-width: 1200px) 60px, (min-width: 768px) 48px, (max-width: 767px) 40px, 100vw"
-          alt="логотип"
-        />
+          " src="./images/logo/mobile_logo.png"
+          sizes="(min-width: 1200px) 60px, (min-width: 768px) 48px, (max-width: 767px) 40px, 100vw" alt="логотип" />
       </a>
 
       <ul class="site-nav">
@@ -31,21 +28,13 @@
         </li>
       </ul>
 
-      <button
-        class="menu-toggle js-open-menu"
-        aria-expanded="false"
-        aria-controls="mobile-menu"
-      >
+      <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
         <svg class="menu-toggle__icon" width="32" height="32">
           <use href="./images/icons.svg#burger"></use>
         </svg>
       </button>
 
-      <button
-        class="header_button header_button--geometry js-open-modal"
-        type="button"
-        data-modal="1"
-      >
+      <button class="header_button header_button--geometry js-open-modal" type="button" data-modal="1">
         Buy now
         <svg class="header_button__icon" width="6" height="9">
           <use href="./images/icons.svg#button_vector"></use>
@@ -66,7 +55,36 @@
 
 
   <a class="logo" href="#" target="_blank" rel="norefferer noopener nofollow">
-    <img srcset="
+    <picture>
+      <source media="(min-width: 1200px)" srcset="
+                ./images/logo/desktop_logo@1x.png,
+                ./images/logo/desktop_logo@2x.webp
+              " type="image/web" />
+      <source media="(min-width:1200px)" srcset="
+                ./images/logo/desktop_logo@1x.png,
+                ./images/logo/desktop_logo@2x.png
+              " type="image/jpg" />
+      <img class="img" src="./images/logo/desktop_logo@1x.png" alt="logo" />
+      <source media="(min-width: 768px)" srcset="
+                ./images/logo/tablet_logo@1x.png,
+                ./images/logo/tablet_logo@2x.webp
+              " type="image/web" />
+      <source media="(min-width:1200px)" srcset="
+                ./images/logo/tablet_logo@1x.png,
+                ./images/logo/tablet_logo@2x.png
+              " type="image/jpg" />
+      <img class="img" src="./images/logo/tablet_logo@1x.png" alt="logo" />
+      <source media="(min-width: 320px)" srcset="
+                ./images/logo/mobile_logo.png,
+                ./images/logo/mobile_logo@2x.webp
+              " type="image/web" />
+      <source media="(min-width:1200px)" srcset="
+                ./images/logo/mobile_logo.png,
+                ./images/logo/mobile_logo@2x.png
+              " type="image/jpg" />
+      <img class="img" src="./images/logo/mobile_logo.png" alt="logo" />
+    </picture>
+    <!-- <img srcset="
         ./images/logo/tablet_logo@2x.webp 96w,
         ./images/logo/tablet_logo@1x.webp 48w,
         ./images/logo/mobile_logo@2x.webp 80w,
@@ -75,7 +93,7 @@
       src="./images/logo/mobile_logo.png"
       sizes="(min-width: 321px) 48px, (max-width: 320px) 40px, 100vw"
       alt="логотип"
-    />
+    /> -->
   </a>
 
   <ul class="mobile-menu">
@@ -83,25 +101,17 @@
       <a href="./index.html" class="mobile-menu__link">Home</a>
     </li>
     <li class="mobile-menu__item">
-      <a href="#about" class="mobile-menu__link js-close-menu"
-        >How it’s made?</a
-      >
+      <a href="#about" class="mobile-menu__link js-close-menu">How it’s made?</a>
     </li>
     <li class="mobile-menu__item">
-      <a href="#products" class="mobile-menu__link js-close-menu"
-        >Our products</a
-      >
+      <a href="#products" class="mobile-menu__link js-close-menu">Our products</a>
     </li>
     <li class="mobile-menu__item">
       <a href="#contacts" class="mobile-menu__link">Contact</a>
     </li>
   </ul>
 
-  <button
-    class="header_button header_button--menu js-open-modal js-close-menu"
-    type="button"
-    data-modal="1"
-  >
+  <button class="header_button header_button--menu js-open-modal js-close-menu" type="button" data-modal="1">
     Buy now
     <svg class="header_button__icon" width="6" height="9">
       <use href="./images/icons.svg#button_vector"></use>
