--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -3,7 +3,7 @@
 
 }
 .logo {
-  animation: rubberBand 2s infinite;
+  animation: rubberBand 2s;
   max-width: 120px;
 }
 
@@ -32,42 +32,7 @@
     transform: scale3d(1, 1, 1);
   }
 }
-.logo_bounce {
-  animation-duration: 2s;
-  animation-fill-mode: both;
-  animation-iteration-count: 10000;
-  animation-name: rubberBand;
-}
 
-@keyframes rubberBand {
-  from {
-    transform: scale3d(1, 1, 1);
-  }
-
-  30% {
-    transform: scale3d(1.25, 0.75, 1);
-  }
-
-  40% {
-    transform: scale3d(0.75, 1.25, 1);
-  }
-
-  50% {
-    transform: scale3d(1.15, 0.85, 1);
-  }
-
-  65% {
-    transform: scale3d(.95, 1.05, 1);
-  }
-
-  75% {
-    transform: scale3d(1.05, .95, 1);
-  }
-
-  to {
-    transform: scale3d(1, 1, 1);
-  }
-}
 
 .rubberBand {
   -webkit-animation-name: rubberBand;
