--- a/src/sass/components/_modal-window.scss
+++ b/src/sass/components/_modal-window.scss
@@ -67,7 +67,6 @@ textarea {
 .overlay.active{
    opacity: 1;
    visibility: visible;
- 
 }
 
 .modal__cross {
@@ -216,6 +215,8 @@ textarea {
    border: 2px solid #96AF8C;
    box-shadow: 0px 5.26027px 19.726px rgba(212, 20, 67, 0.1);
    border-radius: 15px;
+
+   
 }
 
 .box__one__label {
@@ -252,7 +253,7 @@ textarea {
 }
 
 .box__item:focus-within .label__span {
-   border: 2px solid #000000;
+   border: 2px solid #96AF8C;
 }
 
 .box__two {
@@ -295,7 +296,7 @@ textarea {
 }
 
 .box__item:focus-within .label__span--three {
-   border: 2px solid #000000;
+   border: 2px solid #EFD478;
 }
 
 .box__four {
@@ -333,7 +334,7 @@ textarea {
 }
 
 .box__item:focus-within .label__span--five {
-   border: 2px solid #000000;
+   border: 2px solid #D6936D;
 }
 
 .box__six {
