--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,5 @@
 <section class="header" id="header">
+  <h2 class="visually-hidden">Navigation</h2>
   <div class="container">
     <div class="header__nav">
       <a class="logo logo_bounce" href="./index.html" target="_blank" rel="norefferer noopener nofollow">
@@ -55,45 +56,14 @@
 
 
   <a class="logo" href="#" target="_blank" rel="norefferer noopener nofollow">
-    <picture>
-      <source media="(min-width: 1200px)" srcset="
-                ./images/logo/desktop_logo@1x.png,
-                ./images/logo/desktop_logo@2x.webp
-              " type="image/web" />
-      <source media="(min-width:1200px)" srcset="
-                ./images/logo/desktop_logo@1x.png,
-                ./images/logo/desktop_logo@2x.png
-              " type="image/jpg" />
-      <img class="img" src="./images/logo/desktop_logo@1x.png" alt="logo" />
-      <source media="(min-width: 768px)" srcset="
-                ./images/logo/tablet_logo@1x.png,
-                ./images/logo/tablet_logo@2x.webp
-              " type="image/web" />
-      <source media="(min-width:1200px)" srcset="
-                ./images/logo/tablet_logo@1x.png,
-                ./images/logo/tablet_logo@2x.png
-              " type="image/jpg" />
-      <img class="img" src="./images/logo/tablet_logo@1x.png" alt="logo" />
-      <source media="(min-width: 320px)" srcset="
-                ./images/logo/mobile_logo.png,
-                ./images/logo/mobile_logo@2x.webp
-              " type="image/web" />
-      <source media="(min-width:1200px)" srcset="
-                ./images/logo/mobile_logo.png,
-                ./images/logo/mobile_logo@2x.png
-              " type="image/jpg" />
-      <img class="img" src="./images/logo/mobile_logo.png" alt="logo" />
-    </picture>
-    <!-- <img srcset="
+
+    <img srcset="
         ./images/logo/tablet_logo@2x.webp 96w,
         ./images/logo/tablet_logo@1x.webp 48w,
         ./images/logo/mobile_logo@2x.webp 80w,
         ./images/logo/mobile_logo.webp    40w
-      "
-      src="./images/logo/mobile_logo.png"
-      sizes="(min-width: 321px) 48px, (max-width: 320px) 40px, 100vw"
-      alt="логотип"
-    /> -->
+      " src="./images/logo/mobile_logo.png" sizes="(min-width: 321px) 48px, (max-width: 320px) 40px, 100vw"
+      alt="логотип" />
   </a>
 
   <ul class="mobile-menu">
