--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -8,42 +8,28 @@
     </h2>
     <ul class="list about-list">
       <li class="about-list__item about-list__item-first">
-        <div
-          class="about-list__picture wow animate__animated animate__jackInTheBox"
-        >
-          <img
-            srcset="
+        <div class="about-list__picture wow animate__animated animate__jackInTheBox">
+          <img srcset="
               ./images/about/сow_lg@1x.webp 490w,
               ./images/about/сow_lg@2x.webp 980w,
               ./images/about/сow_md@1x.webp 330w,
               ./images/about/сow_md@2x.webp 660w,
               ./images/about/сow_sm@1x.webp 279w,
               ./images/about/сow_sm@2x.webp 558w
-            "
-            type="image/webp"
-            srcset="
-              ./images/about/сow_lg@1x.webp 490w,
-              ./images/about/сow_lg@2x.webp 980w,
-              ./images/about/сow_md@1x.webp 330w,
-              ./images/about/сow_md@2x.webp 660w,
-              ./images/about/сow_sm@1x.webp 279w,
-              ./images/about/сow_sm@2x.webp 558w
-            "
-            type="image/jpg"
+            " srcset="
+              ./images/about/сow_lg@1x.png 490w,
+              ./images/about/сow_lg@2x.png 980w,
+              ./images/about/сow_md@1x.png 330w,
+              ./images/about/сow_md@2x.png 660w,
+              ./images/about/сow_sm@1x.png 279w,
+              ./images/about/сow_sm@2x.png 558w"
             sizes="(min-width: 1200px) 490px, (min-width: 768px) 330px, (min-width: 320px) 279px, 100vw"
-            src="./images/about/сow_lg@1x.webp"
-            width="490"
-            height="490"
-            alt="сow"
-            loading="lazy"
-          />
+            src="./images/about/сow_lg@1x.png" width="490" height="490" alt="сow" loading="lazy" />
         </div>
       </li>
       <li class="about-list__item about-list__item-second">
         <div class="about-list__item-wrapp">
-          <div
-            class="about-list__text about-list__text--bottom _anim-items _anim-no-hide"
-          >
+          <div class="about-list__text about-list__text--bottom _anim-items _anim-no-hide">
             <p class="about__text _anim-show">
               Ice is a place where you will become not only a little happier,
               but also healthier. Health is the main value for us, and we follow
@@ -58,19 +44,14 @@
               cream, 15 types of coffee and 23 milkshakes.
             </p>
           </div>
-          <div
-            class="about-list__text about-list__text--none _anim-items _anim-no-hide"
-          >
+          <div class="about-list__text about-list__text--none _anim-items _anim-no-hide">
             <p class="about__text _anim-show">
               This is enough to choose ice cream and coffee for any mood!
             </p>
           </div>
         </div>
-        <button
-          type="button"
-          class="about-btm button js-open-modal wow animate__animated animate__pulse"
-          data-modal="3"
-        >
+        <button type="button" class="about-btm button js-open-modal wow animate__animated animate__pulse"
+          data-modal="3">
           Read more
           <svg class="button__icon" width="6" height="9">
             <use href="./images/icons.svg#button_vector"></use>
