--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,7 +16,7 @@
 
       <ul class="site-nav">
         <li class="site-nav__item">
-          <a href="/index" class="site-nav__link">Home</a>
+          <a href="./index.html" class="site-nav__link">Home</a>
         </li>
         <li class="site-nav__item">
           <a href="#about" class="site-nav__link">How it’s made?</a>
