--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -13,6 +13,7 @@ body {
     background-repeat: repeat-y;
     background-size: contain;
     background-position: top;
+    cursor: url(../images/icons/cursor.svg), auto;
 
     // mobile screen
     background-image: url('.././images/bg/mobile-bg.webp');
